--- a/.env.dev
+++ b/.env.dev
@@ -6,4 +6,4 @@ app_timezone = 'Asia/Shanghai'
 
 db_dsn = mysql:host=localhost;dbname=yii2basic
 db_username = user
-db_password = 1u2s3e4r5
+db_password = your_password_here
