--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,7 @@
 app_name = taiwan_api_demo
 app_env = dev
 app_debug = true
-app_timezone = 'Asia/Shanghai'
+app_timezone = Asia/Shanghai
 
 db_dsn = mysql:host=localhost;dbname=yii2basic
 db_username = user
