--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "vlucas/phpdotenv": "^5.3",
-        "illuminate/container": "^8.51"
+        "illuminate/container": "^8.51",
+        "illuminate/collections": "^8.51"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
