--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "vlucas/phpdotenv": "^5.3",
         "illuminate/container": "^8.51",
-        "illuminate/collections": "^8.51"
+        "illuminate/collections": "^8.51",
+        "symfony/var-dumper": "^5.3"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
